# Chess

./: .editorconfig  .gitignore  .gitmodules  App.axaml  App.axaml.cs  CMakeLists.txt  Chess.sln  Program.cs  README.md  ViewLocator.cs  chess.sln
.github/workflows/: create_release.yaml
Chess/: App.axaml  Chess.csproj  Program.cs  ViewLocator.cs
Chess/Assets/: piece_black_castle.icns
Chess/Models/: AIChessBoard.cs  BoardUpdateEventArgs.cs  ChessBoard.cs  ChessPiece.cs  ChessTile.cs  ChessTimer.cs  DebugLevel.cs  GameStatus.cs  Logger.cs  Message.cs  TurnData.cs
Chess/ViewModels/: BoardViewModel.cs  GamePanelViewModel.cs  GameStatsViewModel.cs  HistoryViewModel.cs  MainWindowViewModel.cs  MenuViewModel.cs  MoveHistoryViewModel.cs  PlayViewModel.cs  StatsViewModel.cs  ViewModelBase.cs
Chess/Views/: BoardView.axaml  BoardView.axaml.cs  GamePanelView.axaml  GamePanelView.axaml.cs  GameStatsView.axaml  GameStatsView.axaml.cs  HistoryView.axaml  HistoryView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MenuView.axaml  MenuView.axaml.cs  MoveHistoryView.axaml  MoveHistoryView.axaml.cs  PlayView.axaml  PlayView.axaml.cs  StatsView.axaml  StatsView.axaml.cs  ViewBase.cs
Models/: AIChessBoard.cs  BoardHistory.cs  BoardUpdateEventArgs.cs  ChessBoard.cs  ChessMove.cs  ChessPieceType.cs  ChessRow.cs  ChessTile.cs  GameStatus.cs  Logger.cs  Message.cs  MoveData.cs  TurnData.cs
Tests/: Tests.csproj
Tests/Models/: Logger.cs
ViewModels/: AIBoardViewModel.cs  BoardViewModel.cs  GamePanelViewModel.cs  GameStatsViewModel.cs  HistoryViewModel.cs  MainWindowViewModel.cs  MenuViewModel.cs  MoveHistoryViewModel.cs  PlayViewModel.cs  ViewModelBase.cs
Views/: BoardView.axaml  BoardView.axaml.cs  GamePanelView.axaml  GamePanelView.axaml.cs  GameStatsView.axaml.cs  HistoryView.axaml  HistoryView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MenuView.axaml  MenuView.axaml.cs  MoveHistoryView.axaml  MoveHistoryView.axaml.cs  PlayView.axaml  PlayView.axaml.cs  TestView.axaml  TestView.axaml.cs
